--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Trying my HTML and CSS skills.</title>
 </head>
-
+    <link rel="stylesheet" type="text/css" href="style.css">
 <body>
 
 
