--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <title>Trying my HTML and CSS skills.</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
     <link rel="stylesheet" type="text/css" href="style.css">
 <body>
